// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diffTable 1`] = `
"**Size change:** +0.01 kB 
**Total size:** 17.30 kB

| Filename | Size (kB) | kB change | % change |  |
| :--- | :--- | :--- | :--- | :---: |
| \`increase.js\` | **5.00**&nbsp;(10.00) | **+2.50**&nbsp;(+3.00) | **+100.0%**&nbsp;(+42.9%) | 🔴 |
| \`decrease.js\` | **2.50**&nbsp;(7.50) | **-2.50**&nbsp;(-4.50) | **-50.0%**&nbsp;(-37.5%) | 🟢 |
| \`added.js\` | **5.00**&nbsp;(8.00) | **+5.00**&nbsp;(+8.00) | **+100.0%**&nbsp;(+100.0%) | 🔴 |
| \`removed.js\` | **0.00**&nbsp;(0.00) | **-5.00**&nbsp;(-12.00) | **-100.0%**&nbsp;(-100.0%) | 🟢 |
| \`threshold.js\` | **4.50**&nbsp;(7.50) | **+0.01**&nbsp;(+0.01) | **+0.2%**&nbsp;(+0.1%) |  |

<details><summary><strong>View unchanged</strong></summary>

| Filename | Size (kB) | kB change | % change |
| :--- | :--- | :--- | :--- |
| \`unchanged.js\` | **0.30**&nbsp;(1.00) | **0.00**&nbsp;(0.00) | **0.0%**&nbsp;(0.0%) |

</details>

"
`;

exports[`diffTable 2`] = `
"| Filename | Size (kB) | kB change | % change |  |
| :--- | :--- | :--- | :--- | :---: |
| \`increase.js\` | **5.00**&nbsp;(10.00) | **+2.50**&nbsp;(+3.00) | **+100.0%**&nbsp;(+42.9%) | 🔴 |
| \`decrease.js\` | **2.50**&nbsp;(7.50) | **-2.50**&nbsp;(-4.50) | **-50.0%**&nbsp;(-37.5%) | 🟢 |
| \`added.js\` | **5.00**&nbsp;(8.00) | **+5.00**&nbsp;(+8.00) | **+100.0%**&nbsp;(+100.0%) | 🔴 |
| \`removed.js\` | **0.00**&nbsp;(0.00) | **-5.00**&nbsp;(-12.00) | **-100.0%**&nbsp;(-100.0%) | 🟢 |
| \`threshold.js\` | **4.50**&nbsp;(7.50) | **+0.01**&nbsp;(+0.01) | **+0.2%**&nbsp;(+0.1%) |  |

<details><summary><strong>View unchanged</strong></summary>

| Filename | Size (kB) | kB change | % change |
| :--- | :--- | :--- | :--- |
| \`unchanged.js\` | **0.30**&nbsp;(1.00) | **0.00**&nbsp;(0.00) | **0.0%**&nbsp;(0.0%) |

</details>

"
`;

exports[`diffTable 3`] = `
"**Size change:** +0.01 kB 
**Total size:** 17.30 kB

| Filename | Size (kB) | kB change | % change |  |
| :--- | :--- | :--- | :--- | :---: |
| \`increase.js\` | **5.00**&nbsp;(10.00) | **+2.50**&nbsp;(+3.00) | **+100.0%**&nbsp;(+42.9%) | 🔴 |
| \`decrease.js\` | **2.50**&nbsp;(7.50) | **-2.50**&nbsp;(-4.50) | **-50.0%**&nbsp;(-37.5%) | 🟢 |
| \`unchanged.js\` | **0.30**&nbsp;(1.00) | **0.00**&nbsp;(0.00) | **0.0%**&nbsp;(0.0%) |  |
| \`added.js\` | **5.00**&nbsp;(8.00) | **+5.00**&nbsp;(+8.00) | **+100.0%**&nbsp;(+100.0%) | 🔴 |
| \`removed.js\` | **0.00**&nbsp;(0.00) | **-5.00**&nbsp;(-12.00) | **-100.0%**&nbsp;(-100.0%) | 🟢 |
| \`threshold.js\` | **4.50**&nbsp;(7.50) | **+0.01**&nbsp;(+0.01) | **+0.2%**&nbsp;(+0.1%) |  |"
`;

exports[`diffTable 4`] = `
"**Size change:** +0.01 kB 
**Total size:** 17.30 kB

| Filename | Size (kB) | kB change | % change |  |
| :--- | :--- | :--- | :--- | :---: |
| \`increase.js\` | **5.00**&nbsp;(10.00) | **+2.50**&nbsp;(+3.00) | **+100.0%**&nbsp;(+42.9%) | 🔴 |
| \`decrease.js\` | **2.50**&nbsp;(7.50) | **-2.50**&nbsp;(-4.50) | **-50.0%**&nbsp;(-37.5%) | 🟢 |
| \`added.js\` | **5.00**&nbsp;(8.00) | **+5.00**&nbsp;(+8.00) | **+100.0%**&nbsp;(+100.0%) | 🔴 |
| \`removed.js\` | **0.00**&nbsp;(0.00) | **-5.00**&nbsp;(-12.00) | **-100.0%**&nbsp;(-100.0%) | 🟢 |
| \`threshold.js\` | **4.50**&nbsp;(7.50) | **+0.01**&nbsp;(+0.01) | **+0.2%**&nbsp;(+0.1%) |  |"
`;

exports[`diffTable 5`] = `
"**Size change:** +0.01 kB 
**Total size:** 17.30 kB

| Filename | Size (kB) | kB change | % change |  |
| :--- | :--- | :--- | :--- | :---: |
| \`increase.js\` | **5.00**&nbsp;(10.00) | **+2.50**&nbsp;(+3.00) | **+100.0%**&nbsp;(+42.9%) | 🔴 |
| \`decrease.js\` | **2.50**&nbsp;(7.50) | **-2.50**&nbsp;(-4.50) | **-50.0%**&nbsp;(-37.5%) | 🟢 |
| \`added.js\` | **5.00**&nbsp;(8.00) | **+5.00**&nbsp;(+8.00) | **+100.0%**&nbsp;(+100.0%) | 🔴 |
| \`removed.js\` | **0.00**&nbsp;(0.00) | **-5.00**&nbsp;(-12.00) | **-100.0%**&nbsp;(-100.0%) | 🟢 |

<details><summary><strong>View unchanged</strong></summary>

| Filename | Size (kB) | kB change | % change |
| :--- | :--- | :--- | :--- |
| \`unchanged.js\` | **0.30**&nbsp;(1.00) | **0.00**&nbsp;(0.00) | **0.0%**&nbsp;(0.0%) |
| \`threshold.js\` | **4.50**&nbsp;(7.50) | **+0.01**&nbsp;(+0.01) | **+0.2%**&nbsp;(+0.1%) |

</details>

"
`;

exports[`diffTable 6`] = `
"**Size change:** +0.01 kB 
**Total size:** 17.30 kB

| Filename | Size (kB) | kB change | % change |  |
| :--- | :--- | :--- | :--- | :---: |
| \`increase.js\` | **5.00**&nbsp;(10.00) | **+2.50**&nbsp;(+3.00) | **+100.0%**&nbsp;(+42.9%) | 🔴 |
| \`decrease.js\` | **2.50**&nbsp;(7.50) | **-2.50**&nbsp;(-4.50) | **-50.0%**&nbsp;(-37.5%) | 🟢 |
| \`added.js\` | **5.00**&nbsp;(8.00) | **+5.00**&nbsp;(+8.00) | **+100.0%**&nbsp;(+100.0%) | 🔴 |
| \`removed.js\` | **0.00**&nbsp;(0.00) | **-5.00**&nbsp;(-12.00) | **-100.0%**&nbsp;(-100.0%) | 🟢 |
| \`threshold.js\` | **4.50**&nbsp;(7.50) | **+0.01**&nbsp;(+0.01) | **+0.2%**&nbsp;(+0.1%) |  |

<details><summary><strong>View unchanged</strong></summary>

| Filename | Size (kB) | kB change | % change |
| :--- | :--- | :--- | :--- |
| \`unchanged.js\` | **0.30**&nbsp;(1.00) | **0.00**&nbsp;(0.00) | **0.0%**&nbsp;(0.0%) |

</details>

"
`;

exports[`diffTable 7`] = `
"**Size change:** 0.00 kB 
**Total size:** 0.30 kB



<details><summary><strong>View unchanged</strong></summary>

| Filename | Size (kB) | kB change | % change |
| :--- | :--- | :--- | :--- |
| \`unchanged.js\` | **0.30**&nbsp;(1.00) | **0.00**&nbsp;(0.00) | **0.0%**&nbsp;(0.0%) |

</details>

"
`;

exports[`getDeltaText 1`] = `"+5.00"`;

exports[`getDeltaText 2`] = `"-5.00"`;

exports[`getDeltaText 3`] = `"0.00"`;
